Details
-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.1.2
-
None
-
Windows 8.1 64-bit
Description
Even though the tab size and indent size in "Qt Quick -> Code Style" are not 4. "Tools -> QML/JS -> Reformat File" still uses 4 spaces to reformat file.
To reproduce:
- Open Tools -> Options
- Click "Qt Quick" on the left.
- Click "Copy..." button on the right. Click OK.
- Click "Edit..." button on the right.
- Change "Tab size" and "Indent size" to 2.
- Click OK and OK to go back to editor.
- Open a QML file.
- Click "Tools -> QML/JS -> Reformat File". File is reformatted to tab size of 4 spaces.
Attachments
For Gerrit Dashboard: QTCREATORBUG-12849 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
205275,2 | QmlJS: user defined style in reformatting file | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |