src/libs/qmljs/qmljsreformatter.h
@@ -31,4 +31,5 @@
 
 namespace QmlJS {
 QMLJS_EXPORT QString reformat(const Document::Ptr &doc);
+QMLJS_EXPORT QString reformat(const Document::Ptr &doc, int indentSize, int tabSize);
 }
